# python-ciur

./: .coveragerc  .editorconfig  .gitignore  .magnum.yml  .noserc  .pre-commit-config.yaml  .pylintrc  DEVELOPER.rst  Makefile  README.rst  Vagrantfile  bitbucket-pipelines.yml  ciur.dic  ciur.py  contributors.txt  pyproject.toml  pytest.ini  requirements-apt-get.txt  requirements-pip-dev.txt  requirements-pip-test.txt  requirements-pip.txt  requirements.txt  run.py  setup.py  spelling.dic  vagrant_setup.sh
.github/workflows/: actions.yml
automation/: new_release.py
automation/ansible/: dev_playbook.yaml
bash/: nosetest.sh  unittests.sh
ciur/: __init__.py  __package__.py  bnf_parser.py  cast.py  cli.py  dateutil_aditional_languages.py  decorators.py  exceptions.py  experiment.py  helpers.py  indentedGrammarExample.py  lxml_xpath2.py  models.py  parse.py  pytest.ini  python_compatible_2_and_3.py  python_dateutil_aditional_languages.py  rule.py  shortcuts.py  wrapper.py  xpath_functions.py  xpath_functions_ciur.py
ciur/common/: __init__.py  common.py  dom_parser.py  dom_parser_file.py  dom_parser_mongodb.py  dom_parser_object_json.py  dom_parser_str_json.py  inline_handlers.py
ciur/dsl/: __init__.py  example.ciur
ciur/some_lib/: function_name_spaces.py
ciur/test/: test_for.py  test_regexp_xpath2.py  test_title.py
ciur/util/: __init__.py  advanced_dict_dom_parser.py
ciur2/: __init__.py  cast.py  common_equality_mixin.py  page.py  parser.py  rule.py
common/: DomParser.py  DomParserFile.py  __init__.py  common.py  dom_parser.py  dom_parser_file.py  dom_parser_mongodb.py  dom_parser_mysql.py  dom_parser_object_json.py  dom_parser_sqlite.py  dom_parser_str_json.py  dom_parser_url.py  inline_handlers.py
docker/prod/: Dockerfile
docs/: INSTALL.rst  Makefile  README.rst  ciur.spellchecking.dic  conf.py  contents.rst  continuous-integration.rst  hello_world.rst  index.rst  make.bat  python_virtual_environment.rst
docs/bad_code/: README.rst  scrapper_spaggety_in_python.rst  sql_spaggety_in_php.rst  sql_spaggety_in_python.rst  style_spaggety_in_html.rst
docs/dev/: pycharm.rst
docs/docker/: Dockerfile  README.rst  lambda_handler.py  requirements.txt
docs/release_notes/: 0_2_0.rst  0_2_1.rst  next.rst
example.999.md/: 999.md.ciur  parse.py
src/: conftest.py
system/: ciur.dic  vagrant_setup.sh
test/: example.com.doctest  import.io_jobs.ciur  import.io_jobs.doctest  scrapy.org_support.ciur  srapy.org_support.doctest
tests/: README.rst  _test_import.io_jobs.rst  all.py  ciur_symblink  conftest.py  example.com.ciur  import.io_jobs.doctest  pytest.ini  run.py  run_all_test.py  scrapy.org_support.ciur  scrapy.org_support.doctest  test_ciur_string_join.rst  test_cli.py  test_example.com.rst  test_example.org.rst  test_example.txt  test_import.io_jobs.rst  test_scrapy.org_support.rst  test_scrapy.org_support.txt  test_type_list.py  test_xml_document.rst  test_xpath_functions.py
util/: AdvanceDictDomParser.py  AdvancedDict.py  AdvancedOrderedDict.py  __init__.py  advanced_dict_dom_parser.py
web-server/: README.rst
(+268 files in other folders)
